@@ -18,6 +18,7 @@ Jens Elkner <elkner@linofee.org>
 Jarod Wilson <jarod@redhat.com>
 Anton Arapov <anton@redhat.com>
 Roy Franz <roy.franz@linaro.org>
+Tyler Bell <tyler.bell@hp.com>
 
 MANY THANKS TO (IN CHRONOLOGICAL ORDER)
 Werner Heuser
